Añado y explico las funciones de target

--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <a href="http://www.google.com">Google</a>
+    <br>
+    <a href="http://www.google.com" target="_blank">Google Nueva Pestaña</a> <!--Con "target=_blank" hacemos que abra la página en una nueva pestaña-->
+    <br>
+    <a href="http://www.google.com" target="_parent">Google Misma Pestaña</a> <!--Con "target=_parent" hacemos que abra la página en la misma pestaña-->
 </body>
 </html>
