--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <a href="http://www.google.com">Google</a>
+    <a href="http://www.google.com">Google</a> <!--Enlace básico-->
     <br>
     <a href="http://www.google.com" target="_blank">Google Nueva Pestaña</a> <!--Con "target=_blank" hacemos que abra la página en una nueva pestaña-->
     <br>
