--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -6,11 +6,19 @@
     <title>Ejercicio02</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="background-image: url('unnamed.png')">
+    <!--Enlaces-->
     <a href="http://www.google.com">Google</a> <!--Enlace básico-->
     <br>
     <a href="http://www.google.com" target="_blank">Google Nueva Pestaña</a> <!--Con "target=_blank" hacemos que abra la página en una nueva pestaña-->
     <br>
     <a href="http://www.google.com" target="_parent">Google Misma Pestaña</a> <!--Con "target=_parent" hacemos que abra la página en la misma pestaña-->
+    <br>
+    <br>
+    <br>
+
+    <!--Imágenes-->
+
+    <img src="unnamed.png" alt="Genji Overwatch" style="width:250px; height: 250px;">
 </body>
 </html>
