--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -6,7 +6,7 @@
     <title>Ejercicio02</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="background-image: url('unnamed.png')">
+<body style="background-image: url('unnamed.png'); background-repeat: repeat">
     <!--Enlaces-->
     <a href="http://www.google.com">Google</a> <!--Enlace básico-->
     <br>
