--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -3,22 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ejercicio02</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="background-image: url('unnamed.png'); background-repeat: repeat">
-    <!--Enlaces-->
-    <a href="http://www.google.com">Google</a> <!--Enlace básico-->
-    <br>
-    <a href="http://www.google.com" target="_blank">Google Nueva Pestaña</a> <!--Con "target=_blank" hacemos que abra la página en una nueva pestaña-->
-    <br>
-    <a href="http://www.google.com" target="_parent">Google Misma Pestaña</a> <!--Con "target=_parent" hacemos que abra la página en la misma pestaña-->
-    <br>
-    <br>
-    <br>
-
-    <!--Imágenes-->
-
-    <img src="unnamed.png" alt="Genji Overwatch" style="width:250px; height: 250px;">
+<body>
+    
 </body>
 </html>
