--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Ejercicio 02</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="background-image: url('bandera.png');
+            background-repeat: repeat">
+
+    <!--Enlace a la página web del colegio en una nueva pantalla-->
+    <h1><a href="http://www.iesciudadjardin.es/" target="_blank">IES Ciudad Jardín</a></h1>
+    <br/>
+
+    <!--Enlace a la web de la consejería de educación que se abra en la misma pantalla-->
+    <h1><a href="https://www.juntadeandalucia.es/" target="_parent">Consejería de Educación</a></h1>
+    <br/>
+
+    <!--Mapa de andalucía que si pulsa en cada una de las provincias debe direccionar a la delegación 
+    de educación de dicha provincia (en una nueva pestaña)-->
+    <img src="mapa.jpg">
     
 </body>
 </html>
