--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -19,7 +19,7 @@
 
     <!--Mapa de andalucía que si pulsa en cada una de las provincias debe direccionar a la delegación 
     de educación de dicha provincia (en una nueva pestaña)-->
-    <img src="mapa.jpg">
+    <img src="mapa.jpg" style="width: 400px; height: 250px;">
     
 </body>
 </html>
