--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -19,7 +19,9 @@
 
     <!--Mapa de andalucía que si pulsa en cada una de las provincias debe direccionar a la delegación 
     de educación de dicha provincia (en una nueva pestaña)-->
-    <img src="mapa.jpg" style="width: 400px; height: 250px;">
-    
+    <img src="mapa.png" style="width: 400px; height: 250px;" usemap="#formas" ismap="ismap">
+    <map name="formas" id="formas">
+        <area shape="poly" coords="15,135,8,105,27,69,49,53,98,87,71,100,80,166" href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-huelva" target="_blank" />
+        <area shape="poly" coords="15,135,8,105,27,69,49,53,98,87,71,100,80,166" href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-sevilla" target="_blank" />
 </body>
 </html>
