--- a/Ejercicio02/practica.html
+++ b/Ejercicio02/practica.html
@@ -26,8 +26,13 @@
 
     <img src="unnamed.png" alt="Genji Overwatch" style="width:250px; height: 250px;">
     <!--Para crear enlaces dentro de la imagen-->
-    <map name="formas" id="formas">
-        <area shape="rect" coords="..,..,..,.." href="" />
+    <map name="formas" id="formas" usemap="#formas" ismap="ismap">
+        <area shape="rect" coords="98,165,213,286"
+            href="http://www.google.es" target="_blank" />
+        <area shape="circle" coords="338,224,60"
+            href="http://www.wikipedia.org" target="_blank" />
+        <area shape="poly" coords="405,105,499,20,640,189,497,351,390,329"
+            href="http://www.amazon.com" target="_blank" />
     </map>
 </body>
 </html>
