--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -21,10 +21,35 @@
     de educación de dicha provincia (en una nueva pestaña)-->
     <img src="mapa.png" style="width: 400px; height: 250px;" usemap="#formas" ismap="ismap">
     <map name="formas" id="formas">
-        <area shape="poly" coords="15,135,8,105,27,69,49,53,98,87,71,100,80,166"
-            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-huelva" target="_blank" />
+        <area shape="rect" coords="23,94,67,110"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-huelva" target="_blank" /> <!--HUELVA-->
         
-        <area shape="poly" coords=""
-            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-sevilla" target="_blank" />
+        <area shape="rect" coords="98,101,140,119"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-sevilla" target="_blank" /> <!--SEVILLA-->
+
+        <area shape="rect" coords="93,174,129,190"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-cadiz" target="_blank" /> <!--CADIZ-->
+
+        <area shape="rect" coords="159,60,211,77"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-cordoba" target="_blank" /> <!--CORDOBA-->
+
+        <area shape="rect" coords="170,156,217,171"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-malaga" target="_blank" /> <!--MALAGA-->
+
+        <area shape="rect" coords="256,64,290,84"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-jaen" target="_blank" /> <!--JAEN-->
+
+        <area shape="rect" coords="240,131,295,148"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-granada" target="_blank" /> <!--GRANADA-->
+
+        <area shape="rect" coords="322,138,370,154"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-almeria" target="_blank" /> <!--ALMERIA-->
+    </map>
 </body>
 </html>
+
+<!--<area shape="poly" coords="15,135,8,105,27,69,49,53,98,87,71,100,80,166"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-huelva" target="_blank" />--> <!--HUEVLA-->
+
+<!--<area shape="poly" coords="101,88,76,99,84,158,187,132,145,105,123,60"
+            href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-sevilla" target="_blank" />--> <!--SEVILLA-->
