Finalizo ejercicio 02 y comienzo de la 01

--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -19,7 +19,7 @@
 
     <!--Mapa de andalucía que si pulsa en cada una de las provincias debe direccionar a la delegación 
     de educación de dicha provincia (en una nueva pestaña)-->
-    <img src="mapa.png" style="width: 400px; height: 250px;" usemap="#formas" ismap="ismap">
+    <img src="mapa.png" usemap="#formas" ismap="ismap">
     <map name="formas" id="formas">
         <area shape="rect" coords="23,94,67,110"
             href="http://www.juntadeandalucia.es/educacion/webportal/web/delegacion-huelva" target="_blank" /> <!--HUELVA-->
