--- a/Ejercicio03/index.html
+++ b/Ejercicio03/index.html
@@ -7,7 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    
+    <table style="border: 1px solid blue; border-collapse: collapse; padding: 15px ">
+        <caption>Días de la semana</caption>
+        <thead>
+            <tr style="border: 1px solid orange">
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miércoles</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2" style="border: 1px solid black">1</td>
+                <td colspan="2" style="border: 1px solid black">2</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>100</td>
+                <td>200</td>
+                <td>300</td>
+
+            </tr>
+        </tfoot>
+    </table>
     
 </body>
 </html>
