--- a/Ejercicio03/tabla01.html
+++ b/Ejercicio03/tabla01.html
@@ -12,8 +12,8 @@
         <thead>
             <tr>
                 <th style="border: 1px solid black; text-align: center"></th>
-                <th colspan="3" style="border: 1px solid black"><img src="mp3-mini.jpg" width="100" height="100">MP3 Mini</th>
-                <th colspan="2" style="border: 1px solid black"><img src="mp3-grande.png">MP3 Grande</th>
+                <th style="border: 1px solid black" colspan="3"><img src="mp3-mini.jpg" width="100" height="100">MP3 Mini</th>
+                <th style="border: 1px solid black" colspan="2"><img src="mp3-grande.png">MP3 Grande</th>
             </tr>
         </thead>
         <tbody>
@@ -30,17 +30,20 @@
                 <td style="border: 1px solid black; text-align: center"></td>
                 <td style="border: 1px solid black; text-align: center"></td>
                 <td style="border: 1px solid black; text-align: center"></td>
-                <td colspan="2" style="border: 1px solid black; text-align: center"></td>
+                <td style="border: 1px solid black; text-align: center" colspan="2"></td>
             </tr>
             <tr>
                 <td style="border: 1px solid black; text-align: center; font-weight: bold; padding: 30px">Pantalla</td>
-                <td colspan="3" style="border: 1px solid black; text-align: center">LCD de 3 cm (diagonal) con retroiluminación</td>
-                <td colspan="2" style="border: 1px solid black; text-align: center">LCD de 6 cm (diagonal) con retroiluminación</td>
+                <td style="border: 1px solid black; text-align: center" colspan="3">LCD de 3 cm (diagonal) con retroiluminación</td>
+                <td style="border: 1px solid black; text-align: center" colspan="2">LCD de 6 cm (diagonal) con retroiluminación</td>
             </tr>
             <tr>
-                <td rowspan="2">Tiempo de carga</td>
-                <td colspan="3" rowspan="2">Unas 3 horas</td>
-                <td>Unas 4 horas</td>
+                <td style="border: 1px solid black; text-align: center; font-weight: bold; padding: 30px" rowspan="2">Tiempo de carga</td>
+                <td style="border: 1px solid black; text-align: center; padding: 30px" rowspan="2" colspan="3">Unas 3 horas</td>
+                <td style="border: 1px solid black; text-align: center; padding: 30px" colspan="2">Unas 4 horas</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid black; text-align: center; padding: 30px" colspan="2">Unas 2 horas para alcanzar el 80% de la capacidad</td>
             </tr>
         </tbody>
     </table>
