--- a/Ejercicio01/index.html
+++ b/Ejercicio01/index.html
@@ -7,21 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body lang="EN">
-    <h1>Encabezado más grande</h1>
-    <h6>Encabezado más pequeño</h6>
+    <h1>Componentes principales de un Sistema Informático</h1>
+    <p>
+        <ul>
+            <li><b>Procesador:</b> Es el hardware que interpreta las instrucciones de un programa informático mediante la realización de las operaciones aritméticas,
+                lógicas y de entrada/salida del sistema.</li>
+            <li><b>Placa Base:</b>  Es una tarjeta de circuito impreso a la que se conectan los componentes que constituyen la computadora.</li>
+            <li><b>Memoria RAM:</b> En la RAM se cargan todas las instrucciones que ejecuta la unidad central de procesamiento (procesador)
+                y otras unidades del computador, además de contener los datos que manipulan los distintos programas.</li>
+            <li><b>Sistema Operativo:</b> Es un programa o conjunto de programas que se encargan de controlar el hardware de la máquina sobre la que se ejecuta,
+                y administran las funciones de este en función de unos objetivos dados, mostrando una versión simplificada de las capas superiores del software.</li>
+        </ul>
+    </p>
     <br/>
-    <p style="">Párrafo</p>
+
+    <h6>¿Qué es el hardware?</h6>
     <blockquote>
-        
+        <p>
+            "La palabra hardware en informática se refiere a las partes físicas tangibles de un sistema informático;
+            sus componentes eléctricos, electrónicos, electromecánicos y mecánicos."
+        </p>
     </blockquote>
+    <br/>
+
+    <p style="text-align: justify">Párrafo</p>
+   
     <p>
         <ol>
-            <li>Perro</li>
-            <li>Gato</li>
-            <li>Lobo</li>
-            <li>León</li>
+            <li>Shell Script</li>
+            <li>Bash</li>
+            <li>JavaScript</li>
+            <li>Java</li>
+            <li>Pythom</li>
         </ol>
-
     </p>
     
 </body>
