--- a/Ejercicio03/tabla02.html
+++ b/Ejercicio03/tabla02.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <table>
+    <caption style="font-size: 22px">HORARIO</caption>
         <thead>
             <tr>
                 <th></th>
