--- a/Ejercicio03/tabla04.html
+++ b/Ejercicio03/tabla04.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Tabla 04</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="estilos04.css" />
 </head>
@@ -12,18 +12,18 @@
     <caption class="caption">Propiedad empty-cells y caption-side</caption>
         <thead>
             <tr>
-                <td></td>
-                <th class="encabezados">Columna 1</th>
-                <th class="encabezados">Columna 2</th>
-                <th class="encabezados">Columna 3</th>
-                <th class="encabezados">Columna 4</th>
-                <th class="encabezados">Columna 5</th>
+                <th></th>
+                <th class="resaltado">Columna 1</th>
+                <th class="resaltado">Columna 2</th>
+                <th class="resaltado">Columna 3</th>
+                <th class="resaltado">Columna 4</th>
+                <th class="resaltado">Columna 5</th>
             </tr>
         </thead>
 
         <tbody>
             <tr>
-                <td class="filas">Fila 1</td>
+                <td class="resaltado" id="fila">Fila 1</td>
                 <td class="celdas">Celda 1,1</td>
                 <td class="celdas">Celda 1,2</td>
                 <td class="celdas">Celda 1,3</td>
@@ -31,7 +31,7 @@
                 <td class="celdas">Celda 1,5</td>
             </tr>
             <tr>
-                <td class="filas">Fila 2</td>
+                <td class="resaltado" id="fila">Fila 2</td>
                 <td class="celdas"></td>
                 <td class="celdas">Celda 2,2</td>
                 <td class="celdas">Celda 2,3</td>
@@ -39,7 +39,7 @@
                 <td class="celdas"></td>
             </tr>
             <tr>
-                <td class="filas">Fila 3</td>
+                <td class="resaltado" id="fila">Fila 3</td>
                 <td class="celdas">Celda 3,1</td>
                 <td class="celdas"></td>
                 <td class="celdas">Celda 3,3</td>
@@ -47,7 +47,7 @@
                 <td class="celdas">Celda 3,5</td>
             </tr>
             <tr>
-                <td class="filas">Fila 4</td>
+                <td class="resaltado" id="fila">Fila 4</td>
                 <td class="celdas"></td>
                 <td class="celdas">Celda 4,2</td>
                 <td class="celdas"></td>
@@ -55,7 +55,7 @@
                 <td class="celdas">Celda 4,5</td>
             </tr>
             <tr>
-                <td class="filas">Fila 5</td>
+                <td class="resaltado" id="fila">Fila 5</td>
                 <td class="celdas">Celda 5,1</td>
                 <td class="celdas">Celda 5,2</td>
                 <td class="celdas">Celda 5,3</td>
