--- a/Ejercicio03/tabla02.html
+++ b/Ejercicio03/tabla02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tabla02</title>
+    <title>Tabla 02</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="estilos02.css">
 </head>
@@ -23,7 +23,7 @@
 
         <tbody>
             <tr>
-                <td id="horas"></td>
+                <td id="horas">1ª hora<br/>(8:20-9:10)</td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
@@ -31,7 +31,7 @@
                 <td id="modulos"></td>
             </tr>
             <tr>
-                <td id="horas"></td>
+                <td id="horas">2ª hora<br/>(9:10-10:05)</td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
@@ -39,7 +39,7 @@
                 <td id="modulos"></td>
             </tr>
             <tr>
-                <td id="horas"></td>
+                <td id="horas">3ª hora<br/>(10:05-11:00)</td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
@@ -50,7 +50,7 @@
                 <td id="recreo" colspan="6">R      E       C       R       E       O</td>
             </tr>
             <tr>
-                <td id="horas"></td>
+                <td id="horas">4ª hora<br/>(11:30-12:25)</td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
@@ -58,7 +58,7 @@
                 <td id="modulos"></td>
             </tr>
             <tr>
-                <td id="horas"></td>
+                <td id="horas">5ª hora<br/>(12:25-13:20)</td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
@@ -66,7 +66,7 @@
                 <td id="modulos"></td>
             </tr>
             <tr>
-                <td id="horas"></td>
+                <td id="horas">6ª hora<br/>(13:20-14:10)</td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
                 <td id="modulos"></td>
