--- a/Ejercicio03/tabla01.html
+++ b/Ejercicio03/tabla01.html
@@ -27,8 +27,8 @@
             </tr>
             <tr>
                 <td style="border: 1px solid black; text-align: center; font-weight: bold; padding: 30px">Colores</td>
-                <td style="border: 1px solid black; text-align: center"></td>
-                <td style="border: 1px solid black; text-align: center"></td>
+                <td style="border: 1px solid black; text-align: center"><img src="clear-circle-psd-410877.png"></td>
+                <td style="border: 1px solid black; text-align: center"><img src="circulodoble.jpg"></td>
                 <td style="border: 1px solid black; text-align: center"></td>
                 <td style="border: 1px solid black; text-align: center" colspan="2"></td>
             </tr>
