--- a/Ejercicio03/tabla03.html
+++ b/Ejercicio03/tabla03.html
@@ -17,14 +17,40 @@
 
         <tbody>
             <tr>
-                <td>Parte de arriba de América del sur. Países como:</td>
-                <td>Parte de abajo de América del sur. Países como:</td>
-                <td></td>
-                <td></td>
+                <td>Parte de arriba de América del sur. Países como:
+                    <table>
+                        <tr>
+                            <td>Venezuela</td>
+                        </tr>
+                        <tr>
+                            <td>Colombia</td>
+                        </tr>
+                        <tr>
+                            <td>Ecuador</td>
+                        </tr>
+                        <tr>
+                            <td>Perú</td>
+                        </tr>
+                    </table></td>
+                <td>Parte de abajo de América del sur. Países como:
+                <table>
+                    <tr>
+                        <td>Argentina</td>
+                    </tr>
+                    <tr>
+                        <td>Chile</td>
+                    </tr>
+                    <tr>
+                        <td>Uruguay</td>
+                    </tr>
+                    <tr>
+                        <td>Paraguay</td>
+                    </tr>
+                </table></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>Bosque tropical, clima de sabana, clima marítimo con inviernos secos.</td>
+                <td>Climas marítimos con inviernos secos, climas fríos, clima de estepa</td>
             </tr>
         </tbody>
     </table>
