--- a/Ejercicio03/tabla03.html
+++ b/Ejercicio03/tabla03.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="estilos03.css" />
 </head>
 <body>
-    <table>
+    <table class="gris">
         <thead>
             <tr>
-                <th colspan="4">Climas de América del sur</th>
+                <th class="gris_oscuro" colspan="4">Climas de América del sur</th>
             </tr>
         </thead>
 
         <tbody>
             <tr>
                 <td>Parte de arriba de América del sur. Países como:
-                    <table>
+                    <table class="tabla_interior">
                         <tr>
                             <td>Venezuela</td>
                         </tr>
@@ -33,7 +33,7 @@
                         </tr>
                     </table></td>
                 <td>Parte de abajo de América del sur. Países como:
-                <table>
+                <table class="tabla_interior">
                     <tr>
                         <td>Argentina</td>
                     </tr>
@@ -49,8 +49,8 @@
                 </table></td>
             </tr>
             <tr>
-                <td>Bosque tropical, clima de sabana, clima marítimo con inviernos secos.</td>
-                <td>Climas marítimos con inviernos secos, climas fríos, clima de estepa</td>
+                <td class="azul">Bosque tropical, clima de sabana, clima marítimo con inviernos secos.</td>
+                <td class="azul">Climas marítimos con inviernos secos, climas fríos, clima de estepa</td>
             </tr>
         </tbody>
     </table>
