Inicio ejercicio de capas

--- a/Ejercicio04/index.html
+++ b/Ejercicio04/index.html
@@ -3,45 +3,27 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Capas</title>
+    <title>Capas01</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="estilos.css" />
 </head>
 <body>
-   <!-- <span style="font-family: Georgia, 'Times New Roman', Times, serif">Cualquier texto</span> Es una etiqueta a la que aplicaremos un estilo-->
-    <div style="width: 100px; height: 100px; background: red; display: inline-block;">Primera</div>
-    <div style="width: 100px; height: 100px; background: blue; position: relative; top: 20px; left: 20px;">Segunda</div>
+    <div id="caption"><b>Ó  S  C  A  R   W  I  L  D  E</b></div>
+    <div id="cajas">A veces podemos pasarnos años sin vivir en absoluto y, de pronto, toda nuestra vida se concentra en un solo instante.</div>
+    <div id="cajas">A menudo mantengo largas conversaciones conmigo mismo, y soy tan inteligente que a veces no entiendo ni una palabra de lo que digo.</div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
+    <div id="nueva_linea"></div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
+    <div id="nueva_linea"></div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
+    <div id="cajas"></div>
     
-    <div style="background: sienna; position: relative; top: 50px; width: 300px; height: 300px;">
-        <div style="background: yellow; position: relative; top: 10px; left: 10px; width: 70px; height: 70px;"></div>
-    </div>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-    <hr/>
-
-
-    <div style="background: blue; width: 350px; height: 350px;">
-        <img src="unnamed.png" style="width: 150px; height: 150px; float: right; overflow: scroll;"/>
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-        Esto es el horario.
-    </div>
-
-    <div style="width: 100px; height: 100px; background: red; float: left;">1</div>
-    <div style="width: 100px; height: 100px; background: red; float: left; border-color: blue; border-style: dashed;">2</div>
-    <div style="width: 100px; height: 100px; background: red; clear: both; float: left;">3</div>
 </body>
 </html>
