--- a/Ejercicio04/index02.html
+++ b/Ejercicio04/index02.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="estilos02.css" />
 </head>
 <body>
-    
+    <div id="introduccion">
+        <h1 id="titulo">Citas de Gilbert Keith Chesterton</h1>
+        <p id="bio">Gilbert Keith Chesterton (Londres. 29 de mayo de 1874 - Beaconsfield, 14 de junio de 1936), más conocido como G. K. Chesterton, fue un escritor y periodista británico de inicios del siglo XX. calificado a menudo como el "príncipe de las paradojas". Cultivó, entre otros géneros, el ensayo, la narración, la biografía, la lírica, el periodismo y el libro de viajes.</p>
+        <p id="bio">Su personaje más famoso es el Padre Brown, un sacerdote católico de apariencia ingenua, cuya agudeza psicológica hace de él un detective formidable, y que protagonizó más de cincuenta historias reunidas en cinco volúmenes, publicados entre 1911 y 1935.</p>
+
+    </div>
     
 </body>
 </html>
