Inicio ejercicio capas 2

--- a/Ejercicio04/index02.html
+++ b/Ejercicio04/index02.html
@@ -10,9 +10,16 @@
 <body>
     <div id="introduccion">
         <h1 id="titulo">Citas de Gilbert Keith Chesterton</h1>
-        <p id="bio">Gilbert Keith Chesterton (Londres. 29 de mayo de 1874 - Beaconsfield, 14 de junio de 1936), más conocido como G. K. Chesterton, fue un escritor y periodista británico de inicios del siglo XX. calificado a menudo como el "príncipe de las paradojas". Cultivó, entre otros géneros, el ensayo, la narración, la biografía, la lírica, el periodismo y el libro de viajes.</p>
-        <p id="bio">Su personaje más famoso es el Padre Brown, un sacerdote católico de apariencia ingenua, cuya agudeza psicológica hace de él un detective formidable, y que protagonizó más de cincuenta historias reunidas en cinco volúmenes, publicados entre 1911 y 1935.</p>
-
+        <p>Gilbert Keith Chesterton (Londres. 29 de mayo de 1874 - Beaconsfield, 14 de junio de 1936), más conocido como G. K. Chesterton, fue un escritor y periodista británico de inicios del siglo XX. calificado a menudo como el "príncipe de las paradojas". Cultivó, entre otros géneros, el ensayo, la narración, la biografía, la lírica, el periodismo y el libro de viajes.</p>
+        <p>Su personaje más famoso es el Padre Brown, un sacerdote católico de apariencia ingenua, cuya agudeza psicológica hace de él un detective formidable, y que protagonizó más de cincuenta historias reunidas en cinco volúmenes, publicados entre 1911 y 1935.</p>
+    </div>
+    <div id="marco">
+        <div id="capitalismo">
+            <div id="div_capitalismo"><h1>Capitalismo</h1></div>
+            <div id="parrafos"><p>Un ciudadano apenas puede distinguir un impuesto de una multa, salvo que la multa suele ser más barata.</p></div>
+            <div id="parrafos"><p>"Demasiado capitalismo” no significa "demasiados capitalistas", sino "demasiados pocos capitalistas".</p></div>
+            <div id="parrafos"><p>El capitalismo es ese sistema comercial que proporciona respuestas inmediatas ante cualquier demanda y en el que todo el mundo parece totalmente insatisfecho e incapaz de conseguir lo que desea.</p></div>
+        </div>
     </div>
     
 </body>
