--- a/Ejercicio04/index02.html
+++ b/Ejercicio04/index02.html
@@ -20,6 +20,12 @@
             <div id="parrafos"><p>"Demasiado capitalismo” no significa "demasiados capitalistas", sino "demasiados pocos capitalistas".</p></div>
             <div id="parrafos"><p>El capitalismo es ese sistema comercial que proporciona respuestas inmediatas ante cualquier demanda y en el que todo el mundo parece totalmente insatisfecho e incapaz de conseguir lo que desea.</p></div>
         </div>
+        <div id="capitalismo">
+            <div id="div_capitalismo"><h1>Política</h1></div>
+            <div id="parrafos"><p>Nunca habrá una revolución para establecer una democracia. Debe haber democracia para poder llevar a cabo una revolución.</p></div>
+            <div id="parrafos"><p>Cuando un político está en la oposición, es experto en los medios para conseguir algo, y cuando está en el Gobierno, es experto en los obstáculos que impiden conseguirlo.</p></div>
+            <div id="parrafos"><p>El mundo moderno se divide a sí mismo en Conservadores y Progresistas. La misión de los Progresistas es cometer errores. La misión de los Conservadores es evitar que los errores se corrijan.</p></div>
+        </div>
     </div>
     
 </body>
