--- a/Ejercicio04/index04.html
+++ b/Ejercicio04/index04.html
@@ -9,7 +9,24 @@
 <body>
     <h1>ESCRITORES ESPAÑOLES</h1>
     <div id="marco">
-        <h2>Escritores españoles del siglo XVIII</h2>
+        <div id="escritores">
+            <h2>Escritores españoles del siglo XVIII</h2>
+            <div id="fernan">
+                <h3>Fernán Caballero</h3>
+                <div id="imagen">
+                    <img src="fernan.jpg" alt="Fernán Caballero"/>
+                </div>
+                <div id="bio">
+                    <p>Seudónimo utilizado por Cecilia Böhl de Faber y Larrea (Morges, Suiza, 24 de diciembre de 1796 – Sevilla, 7 de abril de 1877).</p>
+                    <p>Cecilia Böhl nació en Suiza y tomó su seudónimo de la población de Fernán Caballero (Ciudad Real). Vivió en Alemania hasta que regresó
+                        con su familia a Cádiz en 1813. Tras su matrimonio en 1816 se mudó a Puerto Rico y tras la muerte de su esposo, vivió en Hamburgo con su abuela.
+                        Años más tarde se mudó nuevamente a El Puerto de Santa María, donde volvió a casrse y envuiudar. El suicidio de su tercer esposo le llevó a la
+                        pobreza, aunque posteriormente los duques de Montpensier y la reina Isabel II la protegieron.</p>
+                    <p>Su obra tiene un carácter costumbrista y se distingue por la defensa de las virtudes tradicionales, la monarquía y el catolicismo, con tramas ligeras
+                        e ingenuas.</p>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
