--- a/Ejercicio06/formularios02.html
+++ b/Ejercicio06/formularios02.html
@@ -6,12 +6,33 @@
     <title>Formulario 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="" />
-<body>
+<body style="font-family: Arial, Helvetica, sans-serif">
     <form action="" method="GET">
-        <ul>
-            <li><label for="">Dirección de correo: </label>
-                <input type="email" value="" name="correo" id="correo"/></li>
-        </ul>
+        <table>
+            <caption><h1>Registro en mi página</h1></caption>
+            <tr>
+                <td><label for="correo">Correo electrónico: </label></td>
+                <td><input type="email" name="correo" id="correo" required="required"
+                        placeholder="ejemplo@example.com"/></td>
+            </tr>
+            <tr>
+                <td><label for="fecha">Fecha y hora del registro: </label></td>
+                <td><input type="datetime-local" name="fecha" id="fecha" required="required"/></td>
+            </tr>
+            <tr>
+                <td><label for="web">Página personal (Si tiene): </label></td>
+                <td><input type="url" name="web" id="web"
+                        placeholder="http://www.example.com"/></td>
+            </tr>
+            <tr>
+                <td><label for="telef">Nº de teléfono: </label></td>
+                <td><input type="tel" name="telef" id="telef" required="required"/></td>
+            </tr>
+            <tr>
+                <td><label for=""></label></td>
+            </tr>
+        </table>
+        <input type="submit" value="Enviar" name="" id="">
     </form>
     
 </body>
@@ -19,15 +40,15 @@
 
 <!--
     <input type="number" min="1" max="10" required="required"/>
-    <input type="email" readonly/>
-    <input type="url"/>
-    <input type="submit"/>
-    <input type="date"/>
+    <input type="email" readonly/> -------------------------
+    <input type="url"/> --------------------
+    <input type="submit"/> ----------------------------
+    <input type="date"/> -----------------
     <input type="time"/>
     <input type="datetime-local"/>
     <input type="month"/>
     <input type="search"/>
-    <input type="tel"/>
+    <input type="tel"/> ------------------------------------
     <input type="range" min="1" max="100" step="2"/>
     <input type="color"/>
 
