--- a/Ejercicio06/formularios02.html
+++ b/Ejercicio06/formularios02.html
@@ -1,69 +1,67 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Formulario 2</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="" />
-    </head>
-    <body style="font-family: Arial, Helvetica, sans-serif">
-        <form action="" method="GET">
-            <table>
-                <caption><h1>Registro en mi página</h1></caption>
-                <tr>
-                    <td><label for="correo">Correo electrónico: </label></td>
-                    <td><input type="email" name="correo" id="correo"
-                            required="required"
-                            placeholder="ejemplo@example.com" /></td>
-                </tr>
-                <tr>
-                    <td><label for="fecha">Fecha y hora del registro: </label></td>
-                    <td><input type="datetime-local" name="fecha" id="fecha"
-                            required="required" /></td>
-                </tr>
-                <tr>
-                    <td><label for="web">Página personal (Si tiene): </label></td>
-                    <td><input type="url" name="web" id="web"
-                            placeholder="http://www.example.com" /></td>
-                </tr>
-                <tr>
-                    <td><label for="telef">Nº de teléfono: </label></td>
-                    <td><input type="tel" name="telef" id="telef"
-                            required="required" /></td>
-                </tr>
-                <tr>
-                    <td><label for="prov">Provincia: </label></td>
-                    <td><select name="prov" id="prov" required="required">
-                            <option value="HU">Huelva</option>
-                            <option value="SE">Sevilla</option>
-                            <option value="CA">Cádiz</option>
-                            <option value="CO">Córdoba</option>
-                            <option value="MA">Málaga</option>
-                            <option value="JA">Jaén</option>
-                            <option value="GR">Granada</option>
-                            <option value="AL">Almería</option>
-                        </select></td>
-                </tr>
-                <tr>
-                    <td><label for="n_dias">Nº días laborales disponible de
-                            la semana: </label></td>
-                    <td><input type="number" name="n_dias" id="n_dias"
-                            min="1" max="5" /></td>
-                </tr>
-                <tr>
-                    <td><label for="propuestas">Propuestas para mejorar la
-                            página: </label></td>
-                    <td><input type="text" name="propuestas" id="propuestas"
-                            placeholder="Escriba alguna propuesta si lo
-                            considera oportuno..." autofocus="autofocus" autocomplete="" /></td>
-                </tr>
-            </table>
-            <input type="submit" value="Enviar" name="" id="" />
-            <input type="reset" value="Borrar" name="" id="" />
-        </form>
 
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Formulario 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="" />
+</head>
+
+<body style="font-family: Arial, Helvetica, sans-serif">
+    <form action="" method="GET">
+        <table>
+            <caption>
+                <h1>Registro en mi página</h1>
+            </caption>
+            <tr>
+                <td><label for="correo">Correo electrónico: </label></td>
+                <td><input type="email" name="correo" id="correo" required="required" placeholder="ejemplo@example.com" /></td>
+            </tr>
+            <tr>
+                <td><label for="fecha">Fecha y hora del registro: </label></td>
+                <td><input type="datetime-local" name="fecha" id="fecha" required="required" /></td>
+            </tr>
+            <tr>
+                <td><label for="web">Página personal (Si tiene): </label></td>
+                <td><input type="url" name="web" id="web" placeholder="http://www.example.com" /></td>
+            </tr>
+            <tr>
+                <td><label for="telef">Nº de teléfono: </label></td>
+                <td><input type="tel" name="telef" id="telef" required="required" /></td>
+            </tr>
+            <tr>
+                <td><label for="prov">Provincia: </label></td>
+                <td><select name="prov" id="prov" required="required">
+                        <option value="HU">Huelva</option>
+                        <option value="SE">Sevilla</option>
+                        <option value="CA">Cádiz</option>
+                        <option value="CO">Córdoba</option>
+                        <option value="MA">Málaga</option>
+                        <option value="JA">Jaén</option>
+                        <option value="GR">Granada</option>
+                        <option value="AL">Almería</option>
+                    </select></td>
+            </tr>
+            <tr>
+                <td><label for="n_dias">Nº días laborales que está usted disponible de la semana: </label></td>
+                <td><input type="number" name="n_dias" id="n_dias" min="1" max="5" /></td>
+            </tr>
+            <tr>
+                <td><label for="propuestas">Propuestas para mejorar la
+                        página: </label></td>
+                <td><input type="text" name="propuestas" id="propuestas" placeholder="Escriba alguna propuesta si lo
+                            considera oportuno..."
+                        autofocus="autofocus" autocomplete="" style="width: 300px; height: 100px" /></td>
+            </tr>
+        </table>
+        <input type="submit" value="Enviar" name="" id="" />
+        <input type="reset" value="Borrar" name="" id="" />
+    </form>
+
+</body>
+
 </html>
 
 <!--
@@ -71,7 +69,7 @@
     <input type="email" readonly/> -------------------------
     <input type="url"/> --------------------
     <input type="submit"/> ----------------------------
-    <input type="date"/> 
+    <input type="date"/>
     <input type="time"/>
     <input type="datetime-local"/> ----------------------
     <input type="month"/>
