--- a/Ejercicio07/index.html
+++ b/Ejercicio07/index.html
@@ -3,51 +3,32 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Multimedia y otros</title>
+        <title>Halopedia</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-        <script src="main.js"></script>
-        <style>
-            @media only 
-        </style>
+        <link rel="stylesheet" type="text/css" media="screen" href="estilos.css"
+            />
+        <meta>
     </head>
     <body>
-        <h1>VIDEO</h1>
-        <video width="400px" height="300px"
-            controls
-            autoplay
-            loop
-            muted
-            preload="auto"
-            poster="">
-            <source src="small.mp4" type="video/mp4; codecs='avc1.42E01E'" />
-            <source src="small.mp4" />
-            <source src="small.ogv" />
-            <p>Tu navegador no soporta HTML 5</p>
-        </video>
-
-        <h1>AUDIO</h1>
-        <audio
-            autoplay
-            controls
-            loop
-            preload="auto">
-            <source src="sonido.mp3" type="audio/mpeg" />
-        </audio>
-
-        <h1>IFRAME</h1>
-        <iframe width="560" height="315"
-            src="https://www.youtube.com/embed/OWodAv1KHaM" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope;
-            picture-in-picture" allowfullscreen></iframe>
-        <br/>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7540.939086500675!2d-5.964465387809467!3d37.37624800710375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1543235588239"
-            width="600" height="450" frameborder="0" style="border:0"
-            allowfullscreen></iframe>
-
-        <h1>OBJECT</h1>
-        <object data=""    type=""></object>
+        <div>
+            <h1>Halo 3</h1>
+            <h2>Historia</h2>
+            <p>La historia comienza aproximadamente dos semanas después de los
+                eventos de Halo 2. Justo después de Halo: Uprising.</p>
+            <p>El 17 de Noviembre de 2552, John-117 entra a la atmósfera de la
+                tierra y hace un aterrizaje forzoso en el este de África. Tras
+                ser hallado por el Sargento Avery Johnson, y un grupo de
+                marines, lo revisan y tiempo después aparece el Inquisidor Thel
+                'Vadam quien es atacado por el Jefe al no saber la unión entre
+                Humanos y Elites, pero Johnson los calma, el grupo se moviliza
+                hacia el punto de extracción ya dicho (acordado), pero es
+                interceptado por varios grupos Covenant, los cuales atacan al
+                grupo mientras es extraído, derribando las naves Pelican y
+                capturando a los sobrevivientes, pero John-117 y Thel' Vadam no
+                son capturados y van en busca de los sobrevivientes asesinando a
+                todos los covenant presentes, logran rescatar a los
+                sobrevivientes y el grupo es finalmente evacuado.</p>
+        </div>
 
     </body>
 </html>
