--- a/Ejercicio07/index.html
+++ b/Ejercicio07/index.html
@@ -3,31 +3,47 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Halopedia</title>
+        <title>Halo Videojuego X-BOX</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="estilos.css"
-            />
-        <meta>
+        <link rel="stylesheet" type="text/css" media="screen" href="estilos.css"/>
+        <meta name="language" content="ES" />
+        <meta name="author" content="David Colchero de la Viña" />
+        <meta name="description" content="En esta web encontrarás todo lo que
+            quieras saber sobre el universo de Halo">
+        <meta name="keywords" content="Halo, Videojuegos, X-box, consola, Halo
+            3, Microsoft, 2552, Jefe Maestro">
+        <meta name="robots" content="Index, Follow">
+
     </head>
     <body>
-        <div>
+        <div id="general">
             <h1>Halo 3</h1>
-            <h2>Historia</h2>
-            <p>La historia comienza aproximadamente dos semanas después de los
-                eventos de Halo 2. Justo después de Halo: Uprising.</p>
-            <p>El 17 de Noviembre de 2552, John-117 entra a la atmósfera de la
-                tierra y hace un aterrizaje forzoso en el este de África. Tras
-                ser hallado por el Sargento Avery Johnson, y un grupo de
-                marines, lo revisan y tiempo después aparece el Inquisidor Thel
-                'Vadam quien es atacado por el Jefe al no saber la unión entre
-                Humanos y Elites, pero Johnson los calma, el grupo se moviliza
-                hacia el punto de extracción ya dicho (acordado), pero es
-                interceptado por varios grupos Covenant, los cuales atacan al
-                grupo mientras es extraído, derribando las naves Pelican y
-                capturando a los sobrevivientes, pero John-117 y Thel' Vadam no
-                son capturados y van en busca de los sobrevivientes asesinando a
-                todos los covenant presentes, logran rescatar a los
-                sobrevivientes y el grupo es finalmente evacuado.</p>
+            <article>
+                <h2>Historia</h2>
+                <p>La historia comienza aproximadamente dos semanas después de
+                    los
+                    eventos de Halo 2. Justo después de Halo: Uprising.</p>
+                <p>El 17 de Noviembre de 2552, John-117 entra a la atmósfera de
+                    la tierra y hace un aterrizaje forzoso en el este de África.
+                    Tras ser hallado por el Sargento Avery Johnson, y un grupo
+                    de
+                    marines, lo revisan y tiempo después aparece el Inquisidor
+                    Thel
+                    'Vadam quien es atacado por el Jefe al no saber la unión
+                    entre
+                    Humanos y Elites, pero Johnson los calma, el grupo se
+                    moviliza
+                    hacia el punto de extracción ya dicho (acordado), pero es
+                    interceptado por varios grupos Covenant, los cuales atacan
+                    al
+                    grupo mientras es extraído, derribando las naves Pelican y
+                    capturando a los sobrevivientes, pero John-117 y Thel' Vadam
+                    no
+                    son capturados y van en busca de los sobrevivientes
+                    asesinando a
+                    todos los covenant presentes, logran rescatar a los
+                    sobrevivientes y el grupo es finalmente evacuado.</p>
+            </article>
         </div>
 
     </body>
