--- a/Ejercicio08/index.html
+++ b/Ejercicio08/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="estilos.css" />
 </head>
+
 <body>
     <div id="general">
-        <header>
+        <header id="cabecera">
             <h1>Página Web Personal</h1>
             <p>Desarrollo web, posicionamiento SEO y nuevas tecnologías</p>
         </header>
 
         <nav id="menu">
             <ul>
-                <li>Inicio</li>
-                <li>Artículos</li>
-                <li>Cursos</li>
-                <li>Contactos</li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Artículos</a></li>
+                <li><a href="#">Cursos</a></li>
+                <li><a href="#">Contactos</a></li>
             </ul>
         </nav>
+
+        <div id="fondo">
+            <section id="contenido">
+                <article>
+                    <header>
+                        <div id="ruta">
+                            <p>Inicio / Seguridad</p>
+                        </div>
+                        <h2>Cómo protejerse de Heartbleed</h2>
+                    </header>
+                    <div id="relleno"></div>
+                    <p>Heartbleed, o CVE-2014-0160, es un gravísimo fallo de seguridad que afecta a todo el mundo de
+                        una u otra manera. Se dice que es el fallo más importante de los últimos tiempos y tanto si te
+                        interesa la seguridad como si no, deberías preocuparte. Te explico de qué va el tema, por qué
+                        debes preocuparte...</p>
+                </article>
+            </section>
+
+            <aside id="derecha">
+
+            </aside>
+        </div>
+
+        <footer id="pie">
+
+        </footer>
     </div>
 </body>
+
 </html>
