--- a/Ejercicio08/index.html
+++ b/Ejercicio08/index.html
@@ -30,7 +30,7 @@
                 <section id="contenido">
                     <article>
                         <header id="ruta">
-                            <p>Inicio / Seguridad</p>
+                            Inicio / Seguridad
                         </header>
                         <h2>Cómo protejerse de Heartbleed</h2>
                         <div id="relleno"></div>
@@ -45,7 +45,21 @@
                 </section>
 
                 <aside id="derecha">
-
+                    <header>
+                        <div id="encabezado">
+                            <h3>Síqueme</h3>
+                        </div>
+                        <ul id="redes">
+                            <li><img src="#" alt=""></li>
+                            <li><img src="#" alt=""></li>
+                            <li><img src="#" alt=""></li>
+                            <li><img src="#" alt=""></li>
+                            <li><img src="#" alt=""></li>
+                        </ul>
+                    </header>
+                    <div id="curso_online">
+                        <h3>Curso online</h3>
+                    </div>
                 </aside>
             </div>
 
