--- a/Ejercicio08/index.html
+++ b/Ejercicio08/index.html
@@ -47,14 +47,14 @@
                 <aside id="derecha">
                     <header>
                         <div id="encabezado">
-                            <h3>Síqueme</h3>
+                            <h3>Sígueme</h3>
                         </div>
                         <ul id="redes">
-                            <li><img src="#" alt=""></li>
-                            <li><img src="#" alt=""></li>
-                            <li><img src="#" alt=""></li>
-                            <li><img src="#" alt=""></li>
-                            <li><img src="#" alt=""></li>
+                            <li><img src=".\img\f.png" alt="Facebook"></li>
+                            <li><img src=".\img\t.png" alt="Twitter"></li>
+                            <li><img src=".\img\g.png" alt="Google +"></li>
+                            <li><img src=".\img\p.png" alt=""></li>
+                            <li><img src=".\img\o.png" alt=""></li>
                         </ul>
                     </header>
                     <div id="curso_online">
